<resources>
    <string name="app_name">Lamimozgi</string>
    <string name="sudoku">Sudoku</string>
    <string name="wordSearch">Wykreślanka</string>
    <string name="crossword">Krzyżówka</string>
    <string name="guesswork">Zgadywanki</string>
    <string name="hangman">Wisielec</string>
    <string name="play">Graj</string>
    <string name="options">Opcje</string>
    <string name="statistics">Statystyki</string>
    <string name="about">O aplikacji</string>
    <string name="world_lamimimozg">Świat Łamimózgów czeka na Ciebie. Co chcesz zrobić?</string>
    <string name="choice_lamimozg">Którego Łamimózga wybierzesz?</string>
    <string name="type_sudoku">Wybierz rodzaj Sudoku</string>
    <string name="irregular">Nieregularne</string>
    <string name="normal">Zwykłe</string>
    <string name="choice_level">Wybierz poziom Łamimózga</string>
    <string name="hard">Trudny</string>
    <string name="medium">Średni</string>
    <string name="easy">Łatwy</string>
    <string name="option_text">O to opcje, które czekają na ustawienie. Co zrobisz?</string>
    <string name="music">Muzyka</string>
    <string name="sound">Dźwięk</string>
    <string name="reset">Resetuj</string>
    <string name="all">Wszystko</string>
    <string name="chosen">Wybrane</string>
    <string name="volume_loud">Głośność dźwięku</string>
    <string name="volume_music">Głośność muzyki</string>
    <string name="want_reset">Co chcesz zresetować?</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clearField">Wyczyść</string>
    <string name="solveBoard">Sprawdź</string>
    <string name="markValue">Oznacz</string>
    <string name="finished">Wykonano</string>
    <string name="not_finished">Nie zrobione</string>
    <string name="choice_stage">Co wybierasz?</string>
    <string name="menu">Menu główne Łamimózgów</string>
    <string name="logo">logo</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="solve_square">Solve square</string>
    <string name="solve_word">Solve word</string>
    <string name="solve_puzzle">Solve puzzle</string>
    <string name="restart">Restart</string>
    <string name="across">%1$d. Across • %2$s</string>
    <string name="down">%1$d. Down • %2$s</string>
    <string name="title_by_author">%1$s by %2$s</string>
    <string name="youve_solved_the_puzzle">You\'ve solved the puzzle!</string>
    <string name="a">A</string>
    <string name="z">Z</string>
    <string name="e">E</string>
    <string name="r">R</string>
    <string name="t">T</string>
    <string name="y">Y</string>
    <string name="u">U</string>
    <string name="i">I</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="s">S</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="check">Sprawdź</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="c">C</string>
    <string name="v">V</string>
    <string name="b">B</string>
    <string name="n">N</string>
    <string name="m">M</string>
    <string name="delete">Usuń</string>
    <string name="hangmanX">Hangman!</string>
    <string name="information">Łamimózgi to aplikacją mobilną, zaprojektowaną na system Android. Jest przeznaczona dla wszystkich osób, którzy lubią gry logiczne. W aplikacji można porozwązywać sudoku regularne(9x9) oraz nieregularne, krzyżówki, poznajdywać i powykreślać słowa, pograć w wisielca oraz udać się w świat zgadywanek.</string>
    <string name="autors">Polecają autorzy aplikacji: Mateusz Olszewski oraz Mateusz Brodziak.</string>
    <string name="back">Wróć</string>
    <string name="arrow">arrow</string>
    <string name="win1">wykonano na</string>
    <string name="win2">wykonano na</string>
    <string name="win5">wykonano na</string>
    <string name="game1">grę</string>
    <string name="game2">gry</string>
    <string name="game5">gier</string>

</resources>
