<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <Button
            android:id="@+id/buttonQ"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/q" />

        <Button
            android:id="@+id/buttonW"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/w" />

        <Button
            android:id="@+id/buttonE"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/e" />

        <Button
            android:id="@+id/buttonR"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/r" />

        <Button
            android:id="@+id/buttonT"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/t" />

        <Button
            android:id="@+id/buttonY"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/y" />

        <Button
            android:id="@+id/buttonU"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/u" />

        <Button
            android:id="@+id/buttonI"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/i" />

        <Button
            android:id="@+id/buttonO"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/o" />

        <Button
            android:id="@+id/buttonP"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/p" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <Button
            android:id="@+id/buttonA"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/a" />

        <Button
            android:id="@+id/buttonS"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/s" />

        <Button
            android:id="@+id/buttonD"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/d" />

        <Button
            android:id="@+id/buttonF"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/f" />

        <Button
            android:id="@+id/buttonG"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/g" />

        <Button
            android:id="@+id/buttonH"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/h" />

        <Button
            android:id="@+id/buttonJ"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/j" />

        <Button
            android:id="@+id/buttonK"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/k" />

        <Button
            android:id="@+id/buttonL"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/l" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <Button
            android:id="@+id/buttonZ"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/z" />

        <Button
            android:id="@+id/buttonX"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/x" />

        <Button
            android:id="@+id/buttonC"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/c" />

        <Button
            android:id="@+id/buttonV"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/v" />

        <Button
            android:id="@+id/buttonB"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/b" />

        <Button
            android:id="@+id/buttonN"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/n" />

        <Button
            android:id="@+id/buttonM"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/round_button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/m" />


    </LinearLayout>


</LinearLayout>