<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <GridView
        android:id="@+id/sudokuGrid"
        android:layout_width="fill_parent"
        android:layout_height="357dp"
        android:layout_above="@+id/relativeLayout"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:numColumns="6"
        android:stretchMode="columnWidth" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="0dp">

        <Button
            android:id="@+id/button1Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button4Value"
            android:layout_alignParentStart="true"
            android:background="@drawable/round_button2"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/one" />

        <Button
            android:id="@+id/button2Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button5Value"
            android:layout_toEndOf="@+id/button1Value"
            android:background="@drawable/round_button2"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/two" />

        <Button
            android:id="@+id/button3Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button6Value"
            android:layout_toEndOf="@+id/button2Value"
            android:background="@drawable/round_button2"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/three" />

        <Button
            android:id="@+id/button4Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/round_button2"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/four" />

        <Button
            android:id="@+id/button5Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/button4Value"
            android:background="@drawable/round_button2"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/five" />

        <Button
            android:id="@+id/button6Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/button2Value"
            android:background="@drawable/round_button2"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/six" />

    </RelativeLayout>

    <Button
        android:id="@+id/buttonNullValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/relativeLayout"
        android:layout_toEndOf="@+id/relativeLayout"
        android:background="@drawable/round_button3"
        android:textColor="@color/lightGreen"
        android:textStyle="bold"
        android:text="@string/clearField"
        android:textSize="14sp" />

    <Button
        android:id="@+id/buttonCheckBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonNullValue"
        android:layout_toEndOf="@+id/relativeLayout"
        android:background="@drawable/round_button3"
        android:textColor="@color/lightGreen"
        android:textStyle="bold"
        android:text="@string/solveBoard"
        android:textSize="14sp" />

    <Button
        android:id="@+id/buttonMarkValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonCheckBoard"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="-2dp"
        android:layout_toEndOf="@+id/relativeLayout"
        android:height="10dp"
        android:background="@drawable/round_button3"
        android:textColor="@color/lightGreen"
        android:textStyle="bold"
        android:text="@string/markValue"
        android:textSize="14sp" />

</RelativeLayout>