<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2">

    <TextView
        android:id="@+id/MainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/round_text_view"
        android:text="@string/want_reset"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="normal"
        app:fontFamily="@font/rubik_mono_one" />

    <Button
        android:id="@+id/sudokuReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/round_button"
        android:text="@string/sudoku"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/wordSearchReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="310dp"
        android:background="@drawable/round_button"
        android:text="@string/wordSearch"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/crosswordReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="370dp"
        android:background="@drawable/round_button"
        android:text="@string/crossword"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/guessworkReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="430dp"
        android:background="@drawable/round_button"
        android:text="@string/guesswork"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/hangmanReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="490dp"
        android:background="@drawable/round_button"
        android:text="@string/hangman"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"/>



</RelativeLayout>