<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3">


    <TextView
        android:id="@+id/MainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/round_textview"
        android:fontFamily="@font/rubik_mono_one"
        android:text="@string/option_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/sound"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/round_button"
        android:text="@string/volume_loud"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/music"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/round_button"
        android:text="@string/volume_music"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/round_button"
        android:text="@string/reset"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"/>

</RelativeLayout>