<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="400dp"
    android:background="@drawable/background13"
    android:orientation="vertical">

    <TextView
        android:id="@+id/MainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/round_text_view"
        android:fontFamily="@font/rubik_mono_one"
        android:text="@string/type_sudoku"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="36sp" />

    <Button
        android:id="@+id/normalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/round_button"
        android:text="@string/normal"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/unNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/round_button"
        android:text="@string/irregular"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>

</RelativeLayout>